// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`successExecute [Case insensitive] variable "=Variable.FOO" -> 10 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "22222222-2222-2222-2222-222222222222",
          "type": "id",
          "value": "22222222-2222-2222-2222-222222222222",
        },
        "id": "22222222-2222-2222-2222-222222222222",
        "kind": "Block",
        "name": "Variable",
        "namespaceId": "22222222-2222-2222-2222-222222222222",
      },
      "code": "Block",
      "display": "Variable",
      "errors": Array [],
      "hide": false,
      "type": "Block",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "22222222-2222-2222-2222-222222222222",
          "type": "id",
          "value": "22222222-2222-3333-2222-222222222222",
        },
        "id": "22222222-2222-3333-2222-222222222222",
        "kind": "Variable",
        "name": "foo",
        "namespaceId": "22222222-2222-2222-2222-222222222222",
      },
      "code": "Variable",
      "display": "foo",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
  ],
]
`;

exports[`successExecute block "=#CurrentBlock" -> BLOCK_SNAPSHOT,Block,11111111-1111-1111-1111-111111111111 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "11111111-1111-1111-1111-111111111111",
          "type": "id",
          "value": "11111111-1111-1111-1111-111111111111",
        },
        "id": "11111111-1111-1111-1111-111111111111",
        "kind": "Block",
        "name": "Block",
        "namespaceId": "11111111-1111-1111-1111-111111111111",
      },
      "code": "Block",
      "display": "Block",
      "errors": Array [],
      "hide": true,
      "type": "Block",
    },
  ],
]
`;

exports[`successExecute block "=Block" -> BLOCK_SNAPSHOT,Block,11111111-1111-1111-1111-111111111111 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "11111111-1111-1111-1111-111111111111",
          "type": "id",
          "value": "11111111-1111-1111-1111-111111111111",
        },
        "id": "11111111-1111-1111-1111-111111111111",
        "kind": "Block",
        "name": "Block",
        "namespaceId": "11111111-1111-1111-1111-111111111111",
      },
      "code": "Block",
      "display": "Block",
      "errors": Array [],
      "hide": false,
      "type": "Block",
    },
  ],
]
`;

exports[`successExecute functionCall "=Abs(-1) + abs(1) + ABS(1) + core::ABS(-1)" -> 4 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "Abs",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "LParen",
      "display": "(",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "-1",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "RParen",
      "display": ")",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Plus",
      "display": "+",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "abs",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "LParen",
      "display": "(",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "RParen",
      "display": ")",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Plus",
      "display": "+",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "ABS",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "LParen",
      "display": "(",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "RParen",
      "display": ")",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Plus",
      "display": "+",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "FunctionGroup",
      "display": "core",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "DoubleColon",
      "display": "::",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "ABS",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "LParen",
      "display": "(",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "-1",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "RParen",
      "display": ")",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
  ],
]
`;

exports[`successExecute functionCall "=custom::PLUS(1, 1)" -> 2 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "FunctionGroup",
      "display": "custom",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "DoubleColon",
      "display": "::",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "PLUS",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "LParen",
      "display": "(",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Comma",
      "display": ",",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "RParen",
      "display": ")",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
  ],
]
`;

exports[`successExecute variable "="foo"" -> 10 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "22222222-2222-2222-2222-222222222222",
          "type": "id",
          "value": "22222222-2222-3333-2222-222222222222",
        },
        "id": "22222222-2222-3333-2222-222222222222",
        "kind": "Variable",
        "name": "foo",
        "namespaceId": "22222222-2222-2222-2222-222222222222",
      },
      "code": "Variable",
      "display": "foo",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
  ],
]
`;

exports[`successExecute variable "=#22222222-2222-2222-2222-222222222222.foo" -> 10 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "22222222-2222-2222-2222-222222222222",
          "type": "id",
          "value": "22222222-2222-2222-2222-222222222222",
        },
        "id": "22222222-2222-2222-2222-222222222222",
        "kind": "Block",
        "name": "Variable",
        "namespaceId": "22222222-2222-2222-2222-222222222222",
      },
      "code": "Block",
      "display": "Variable",
      "errors": Array [],
      "hide": false,
      "type": "Block",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "22222222-2222-2222-2222-222222222222",
          "type": "id",
          "value": "22222222-2222-3333-2222-222222222222",
        },
        "id": "22222222-2222-3333-2222-222222222222",
        "kind": "Variable",
        "name": "foo",
        "namespaceId": "22222222-2222-2222-2222-222222222222",
      },
      "code": "Variable",
      "display": "foo",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
  ],
]
`;

exports[`successExecute variable "=#CurrentBlock.foo" -> 10 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "22222222-2222-2222-2222-222222222222",
          "type": "id",
          "value": "22222222-2222-3333-2222-222222222222",
        },
        "id": "22222222-2222-3333-2222-222222222222",
        "kind": "Variable",
        "name": "foo",
        "namespaceId": "22222222-2222-2222-2222-222222222222",
      },
      "code": "Variable",
      "display": "foo",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
  ],
]
`;

exports[`successExecute variable "=Variable.foo" -> 10 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "22222222-2222-2222-2222-222222222222",
          "type": "id",
          "value": "22222222-2222-2222-2222-222222222222",
        },
        "id": "22222222-2222-2222-2222-222222222222",
        "kind": "Block",
        "name": "Variable",
        "namespaceId": "22222222-2222-2222-2222-222222222222",
      },
      "code": "Block",
      "display": "Variable",
      "errors": Array [],
      "hide": false,
      "type": "Block",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "22222222-2222-2222-2222-222222222222",
          "type": "id",
          "value": "22222222-2222-3333-2222-222222222222",
        },
        "id": "22222222-2222-3333-2222-222222222222",
        "kind": "Variable",
        "name": "foo",
        "namespaceId": "22222222-2222-2222-2222-222222222222",
      },
      "code": "Variable",
      "display": "foo",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
  ],
]
`;

exports[`successExecute variable "=foo" -> 10 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "22222222-2222-2222-2222-222222222222",
          "type": "id",
          "value": "22222222-2222-3333-2222-222222222222",
        },
        "id": "22222222-2222-3333-2222-222222222222",
        "kind": "Variable",
        "name": "foo",
        "namespaceId": "22222222-2222-2222-2222-222222222222",
      },
      "code": "Variable",
      "display": "foo",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
  ],
]
`;
